# SkyForge

./: .gitignore  README.md  SKYFORGE_LOGUPDATER.md  package-lock.json
backend/: .env  .gitignore  fly.toml  package-lock.json  package.json  server.js
backend/db/: testDb.js
backend/prisma/: schema.prisma
backend/src/: server.js
backend/src/routes/: auth.js  callsignRoutes.js  gateRoutes.js
backend/src/services/: auroraService.js  gateService.js
docs/: SKYFORGE_LOGUPDATER.md
frontend/: env.example.url  gitattributes.url  gitignore.url  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FloatingParticles.tsx  Footer.tsx  Header.tsx  LoadingSpinner.tsx  Map.tsx  RadarBackground.tsx  SplashScreen.tsx
frontend/src/routes/: About.tsx  AirportSelection.tsx  CallsignInput.tsx  Career.tsx  Changelog.tsx  Dashboard.tsx  Development.tsx  GateAssignment.tsx  Join.tsx  LandingPage.tsx  Login.tsx  Products.tsx  Register.tsx  SkyForge.tsx
frontend/src/services/: authServices.ts
frontend/src/styles/: background.css  skyforge-glow.css
frontend/src/types/: arc.d.ts  leaflet-arc.d.ts
mobile/aurora_companionapp/: README.md  pubspec.yaml
mobile/aurora_companionapp/linux/: CMakeLists.txt
mobile/aurora_companionapp/test/: widget_test.dart
mobile/aurora_companionapp/web/: index.html  manifest.json
mobile/aurora_companionapp/windows/: CMakeLists.txt
products/mrc/: CMakeLists.txt
products/mrc/src/: main.cpp
products/mrc/src/ui/: MainWindow.cpp  MainWindow.h
(+21 files in other folders)
